[tool.poetry]
name = "kamranchik"
version = "0.1.0"
description = ""
authors = ["'Kamran <kamrankek48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
motor = "^3.5.1"
pymongo = "^4.8.0"
loguru = "^0.7.2"
dependency-injector = "^4.41.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"